2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vXXXl.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vsubl.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vaddl.c: Use code from
	vXXXl.inc.

2015-01-21  Renlin Li  <renlin.li@arm.com>

	* g++.dg/tls/thread_local5.C: Skip when dejagnu wrapper is used.
	* g++.dg/tls/thread_local5g.C: Likewise.
	* g++.dg/tls/thread_local6g.C: Likewise.

2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vsXi_n.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vsli_n.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vsri_n.c: New file.

2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vqdmlXl_n.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vqdmlal_n.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vqdmlsl_n.c: New file.

2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vqdmlXl_lane.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vqdmlal_lane.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vqdmlsl_lane.c: New file.

2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vqdmlXl.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vqdmlal.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vqdmlsl.c: New file.

2015-01-20  Jeff Law  <law@redhat.com>

	PR target/59946
	* gcc.target/m68k/pr59946.c: New test.

2015-01-20  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vmlXl_n.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmlal_n.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmlsl_n.c: New file.

2015-01-20  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vmlXl_lane.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmlal_lane.c: New file.