@@ -2,8 +2,8 @@
 #include "arm-neon-ref.h"
 #include "compute-ref-data.h"
 
-#define INSN_NAME vaddw
-#define TEST_MSG "VADDW"
+#define INSN_NAME vsubw
+#define TEST_MSG "VSUBW"
 
 /* Expected results.  */
 VECT_VAR_DECL(expected,int,8,8) [] = { 0x33, 0x33, 0x33, 0x33,
@@ -24,21 +24,20 @@ VECT_VAR_DECL(expected,int,8,16) [] = { 0x33, 0x33, 0x33, 0x33,
 					0x33, 0x33, 0x33, 0x33,
 					0x33, 0x33, 0x33, 0x33,
 					0x33, 0x33, 0x33, 0x33 };
-VECT_VAR_DECL(expected,int,16,8) [] = {  0xffe3, 0xffe4, 0xffe5, 0xffe6,
-					 0xffe7, 0xffe8, 0xffe9, 0xffea };
-VECT_VAR_DECL(expected,int,32,4) [] = { 0xffffffe2, 0xffffffe3,
-					0xffffffe4, 0xffffffe5 };
-VECT_VAR_DECL(expected,int,64,2) [] = { 0xffffffffffffffe0,
-					0xffffffffffffffe1 };
+VECT_VAR_DECL(expected,int,16,8) [] = { 0xfffd, 0xfffe, 0xffff, 0x0,
+					0x1, 0x2, 0x3, 0x4 };
+VECT_VAR_DECL(expected,int,32,4) [] = { 0xfffffffe, 0xffffffff, 0x0, 0x1 };
+VECT_VAR_DECL(expected,int,64,2) [] = { 0x0, 0x1 };
 VECT_VAR_DECL(expected,uint,8,16) [] = { 0x33, 0x33, 0x33, 0x33,
 					 0x33, 0x33, 0x33, 0x33,
 					 0x33, 0x33, 0x33, 0x33,
 					 0x33, 0x33, 0x33, 0x33 };
-VECT_VAR_DECL(expected,uint,16,8) [] = { 0xe3, 0xe4, 0xe5, 0xe6,
-					 0xe7, 0xe8, 0xe9, 0xea };
-VECT_VAR_DECL(expected,uint,32,4) [] = { 0xffe1, 0xffe2,
-					 0xffe3, 0xffe4 };
-VECT_VAR_DECL(expected,uint,64,2) [] = { 0xffffffe0, 0xffffffe1 };
+VECT_VAR_DECL(expected,uint,16,8) [] = { 0xfefd, 0xfefe, 0xfeff, 0xff00,
+					 0xff01, 0xff02, 0xff03, 0xff04 };
+VECT_VAR_DECL(expected,uint,32,4) [] = { 0xfffeffff, 0xffff0000,
+					 0xffff0001, 0xffff0002 };
+VECT_VAR_DECL(expected,uint,64,2) [] = { 0xffffffff00000000,
+					 0xffffffff00000001 };
 VECT_VAR_DECL(expected,poly,8,16) [] = { 0x33, 0x33, 0x33, 0x33,
 					 0x33, 0x33, 0x33, 0x33,
 					 0x33, 0x33, 0x33, 0x33,
