@@ -1,5 +1,12 @@
 2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>
 
+	* gcc.target/aarch64/advsimd-intrinsics/vXXXw.inc: New file.
+	* gcc.target/aarch64/advsimd-intrinsics/vsubw.c: New file.
+	* gcc.target/aarch64/advsimd-intrinsics/vaddw.c: Use code from
+	vXXXw.inc.
+
+2015-01-21  Christophe Lyon  <christophe.lyon@linaro.org>
+
 	* gcc.target/aarch64/advsimd-intrinsics/vXXXl.inc: New file.
 	* gcc.target/aarch64/advsimd-intrinsics/vsubl.c: New file.
 	* gcc.target/aarch64/advsimd-intrinsics/vaddl.c: Use code from
